--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- FONT -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    
+    <!-- LÄNKAD EPCSS -->
+    <link rel="stylesheet" href="./css/epcss.css">
 
     <!-- LÄNKAD CSS -->
     <link rel="stylesheet" href="./css/style.css">
@@ -43,7 +46,7 @@
         </div>
         <div class="hero-wrapper">
             <div class="hero">
-                <h1 class="hero-text">Teknik<span class="break">programmet</span><span class="blue">!</span></h1>
+                <h1 class="hero-text">Teknik<span class="break">programmet </span><span class="blue"> !</span></h1>
                 <div class="hero-content">
                     <p>Teknikprogrammet vänder sig till dig en högskoleförberedande bred ubildning <br>som vill arbeta med teknik och tekniska processer.</p>
                     <a href="#" class="hero-content-btn">Läs mer!</a>
@@ -61,12 +64,12 @@
         </div>
     </div>
 
-
+<!--
     <div class="inriktningar">
         <div class="content">
             <div class="content-wrapper">
                 <div class="content-text">
-                    <h1 class="title-1">Vad du lär dig!</h1>
+                    <h1 class="title-4">Vad du lär dig!</h1>
                     <p class="p">Med eleven i centrum skapar vi en aktuell, 
                             intressant och meningsfull studietid som ger 
                             dig goda förutsättningar för såväl fortsatta 
@@ -85,7 +88,7 @@
             </div>
             <div class="content-wrapper">
                 <div class="content-text">
-                    <h1 class="title-1">Efter Gymnasiet</h1>
+                    <h1 class="title-4">Efter Gymnasiet</h1>
                     <p>Teknikprogrammet ger bred behörighet att söka till högskola 
                         och universitet. Du kan välja att utbilda dig till 
                         civilingenjör, designer, spelutvecklare och mycket mer. 
@@ -96,7 +99,7 @@
             </div>
             <div class="content-wrapper">
                 <div class="content-text">
-                    <h1 class="title-1">Behörighetskrav</h1>
+                    <h1 class="title-4">Behörighetskrav</h1>
                     <p>Om du söker till Teknikprogrammet måste du ha minst 
                     betyget E i ämnena:</p>
                     <ul>
@@ -108,6 +111,80 @@
                         <li>Fysik</li>
                         <li>6 övriga ämnen</li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+-->
+    <div class="c-card-container">
+        <div class="c-cards-s">
+            <div class="c-card">
+                <div class="c-card-bg">
+                    <div class="c-card-text">
+                        <h1>Här lär du dig</h1>
+                        <p>Håll över här!</p>
+                    </div>
+                    <div class="c-card-text-hidden">
+                        <h1>Här lär du dig:</h1>
+                        <p>Med eleven i centrum skapar vi en aktuell, intressant och meningsfull 
+                            studietid som ger dig goda förutsättningar för såväl fortsatta studier 
+                            som ett framtida yrkesliv. Allt sker i en digital lärmiljö, du får använda 
+                            professionell mjukvara och den senaste tekniken. Du utgår ofta från 
+                            praktiska problem som du löser tillsammans med andra eller enskilt, 
+                            ibland i projektform. Du tränar din förmåga att utveckla nya och kreativa 
+                            lösningar. Du tränar dig i att analysera, modellera, utveckla, se samband, 
+                            dra slutsatser och argumentera för att bättre förstå tekniska system. Du 
+                            söker och bearbetar information källkritiskt. Under studietiden får du 
+                            möjlighet att starta och driva eget UF-företag.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-card">
+                <div class="c-card-bg">
+                    <div class="c-card-text">
+                        <h1>Efter gymnasiet</h1>
+                        <p>Håll över här!</p>
+                    </div>
+                    <div class="c-card-text-hidden">
+                        <h1>Efter gymnasiet:</h1>
+                        <p>Teknikprogrammet ger bred behörighet att söka till högskola och universitet. 
+                            Du kan välja att utbilda dig till civilingenjör, designer, spelutvecklare 
+                            och mycket mer. Inriktningen teknikvetenskap ger, utan vidare val under 
+                            programmets gång, behörighet till civilingenjörs- och 
+                            högskoleingenjörsutbildningar.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-card">
+                <div class="c-card-bg">
+                    <div class="c-card-text">
+                        <h1>Behörighetskrav</h1>
+                        <p>Håll över här!</p>
+                    </div>
+                    <div class="c-card-text-hidden">
+                        <h1>Behörighetskrav:</h1>
+                        <p>Om du söker till Teknikprogrammet måste du ha minst betyget E i ämnena:
+
+                                Svenska/Svenska som andraspråk
+                                Matematik
+                                Engelska
+                                Biologi
+                                Kemi
+                                Fysik
+                                6 övriga ämnen</p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-card">
+                <div class="c-card-bg">
+                    <div class="c-card-text">
+                        <h1>Vad kommer efter?</h1>
+                        <p>Håll över här!</p>
+                    </div>
+                    <div class="c-card-text-hidden">
+                        <h1>Vad kommer efter:</h1>
+                        <p>Alla möjligheter...</p>
+                    </div>
                 </div>
             </div>
         </div>
