--- a/index.html
+++ b/index.html
@@ -64,58 +64,6 @@
         </div>
     </div>
 
-<!--
-    <div class="inriktningar">
-        <div class="content">
-            <div class="content-wrapper">
-                <div class="content-text">
-                    <h1 class="title-4">Vad du lär dig!</h1>
-                    <p class="p">Med eleven i centrum skapar vi en aktuell, 
-                            intressant och meningsfull studietid som ger 
-                            dig goda förutsättningar för såväl fortsatta 
-                            studier som ett framtida yrkesliv. Allt sker 
-                            i en digital lärmiljö, du får använda professionell 
-                            mjukvara och den senaste tekniken. Du utgår ofta 
-                            från praktiska problem som du löser tillsammans med 
-                            andra eller enskilt, ibland i projektform. Du tränar 
-                            din förmåga att utveckla nya och kreativa lösningar. 
-                            Du tränar dig i att analysera, modellera, utveckla, 
-                            se samband, dra slutsatser och argumentera för att 
-                            bättre förstå tekniska system. Du söker och bearbetar 
-                            information källkritiskt. Under studietiden får du 
-                            möjlighet att starta och driva eget UF-företag.</p>
-                </div>
-            </div>
-            <div class="content-wrapper">
-                <div class="content-text">
-                    <h1 class="title-4">Efter Gymnasiet</h1>
-                    <p>Teknikprogrammet ger bred behörighet att söka till högskola 
-                        och universitet. Du kan välja att utbilda dig till 
-                        civilingenjör, designer, spelutvecklare och mycket mer. 
-                        Inriktningen teknikvetenskap ger, utan vidare val under 
-                        programmets gång, behörighet till civilingenjörs- och 
-                        högskoleingenjörsutbildningar.</p>
-                </div>
-            </div>
-            <div class="content-wrapper">
-                <div class="content-text">
-                    <h1 class="title-4">Behörighetskrav</h1>
-                    <p>Om du söker till Teknikprogrammet måste du ha minst 
-                    betyget E i ämnena:</p>
-                    <ul>
-                        <li>Svenska/Svenska som andraspråk</li>
-                        <li>Matematik</li>
-                        <li>Engelska</li>
-                        <li>Biologi</li>
-                        <li>Kemi</li>
-                        <li>Fysik</li>
-                        <li>6 övriga ämnen</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
--->
     <div class="c-card-container">
         <div class="c-cards-s">
             <div class="c-card">
@@ -183,7 +131,7 @@
                     </div>
                     <div class="c-card-text-hidden">
                         <h1>Vad kommer efter:</h1>
-                        <p>Alla möjligheter...</p>
+                        <p>Alla möjligheVter...</p>
                     </div>
                 </div>
             </div>
@@ -204,14 +152,17 @@
         </div>
     </div>
 
+    <div class="content-container-75 grid-1-3">
+        <div class="">
 
+        </div>
+    </div>
 
     <div class="banner" id="socialaMedier">
             <div class="banner-text">
                 <h1 class="banner-h1">sociala medier</h1>
             </div>
     </div>
-
 
 
     <!-- GSAP -->
@@ -221,3 +172,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
