--- a/index.html
+++ b/index.html
@@ -152,9 +152,12 @@
         </div>
     </div>
 
-    <div class="content-container-75 grid-1-3">
-        <div class="">
-
+    <div class="inrik inrik-grid">
+        <div class="inrik-img">
+        </div>
+        <div class="inrik-img">
+        </div>
+        <div class="inrik-img">
         </div>
     </div>
 
@@ -162,6 +165,17 @@
             <div class="banner-text">
                 <h1 class="banner-h1">sociala medier</h1>
             </div>
+    </div>
+
+    <div class="content-container-75">
+        <div class="sociala-medier">
+            <div class="facebook">
+                <iframe src="https://www.facebook.com/teknist/"
+                width="100%" height="500px"></iframe>
+            </div>
+            <div class="instagram"></div>
+            <div class="twitter"></div>
+        </div>
     </div>
 
 
