--- a/index.html
+++ b/index.html
@@ -170,14 +170,27 @@
     <div class="content-container-75">
         <div class="sociala-medier">
             <div class="facebook">
-                <iframe src="https://www.facebook.com/teknist/"
-                width="100%" height="500px"></iframe>
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fteknist%2F&tabs=timeline&width=340&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                width="100%" height="100%"></iframe>
             </div>
-            <div class="instagram"></div>
-            <div class="twitter"></div>
+            <div class="instagram">
+                <iframe src="https://www.powr.io/plugins/instagram-feed/view?unique_label=80f9a863_1548191557&external_type=iframe"
+                width="100%" height="100%"></iframe>
+            </div>
+            <div class="twitter">
+                <iframe src="https://twitter.com/Teknikprogramm1?ref_src=twsrc%5Etfw"
+                width="100%" height="100%"></iframe>
+            </div>
         </div>
     </div>
 
+    <div class="banner" id="socialaMedier">
+        <div class="banner-text">
+            <h1 class="banner-h1">Kontakta</h1>
+        </div>
+    </div>
+
+    
 
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
