--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <a href="#" data-text="Hem">Hem</a>
             <a href="#inriktningar" data-text="Inriktningar">Inriktningar</a>
             <a href="#socialaMedier" data-text="Sociala Medier">Sociala Medier</a>
-            <a href="#" data-text="Besök oss">Besök oss</a>
-            <a href="#" data-text="Kontakta">Kontakta</a>
+            <a href="#besökoss" data-text="Besök oss">Besök oss</a>
+            <a href="#kontakta" data-text="Kontakta">Kontakta</a>
         </div>
     </div>
 
@@ -167,30 +167,48 @@
             </div>
     </div>
 
-    <div class="content-container-75">
+    <div class="medier">
+        <div class="medier-header flex-cc">
+            <h1>Våra sociala medier!</h1>
+        </div>
         <div class="sociala-medier">
             <div class="facebook">
-                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fteknist%2F&tabs=timeline&width=340&height=700&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                width="100%" height="100%"></iframe>
+                <script src="https://www.powr.io/powr.js?platform=html"></script><div class="powr-social-feed" id="fa94f35f_1576513303"></div>
             </div>
             <div class="instagram">
-                <iframe src="https://www.powr.io/plugins/instagram-feed/view?unique_label=80f9a863_1548191557&external_type=iframe"
-                width="100%" height="100%"></iframe>
+                    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+                    <div class="elfsight-app-0abb4f8d-e410-4a17-8146-494989362c0f"></div>
             </div>
             <div class="twitter">
-                <iframe src="https://twitter.com/Teknikprogramm1?ref_src=twsrc%5Etfw"
-                width="100%" height="100%"></iframe>
+<a class="twitter-timeline" href="https://twitter.com/Teknikprogramm1?ref_src=twsrc%5Etfw">Tweets by Teknikprogramm1</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </div>
 
-    <div class="banner" id="socialaMedier">
+    <div class="banner" id="besökoss">
+            <div class="banner-text">
+                <h1 class="banner-h1">Besök oss!</h1>
+            </div>
+    </div>
+
+    <!-- Google maps och kontaktuppgifter -->
+
+    <div class="banner" id="kontakta">
         <div class="banner-text">
             <h1 class="banner-h1">Kontakta</h1>
         </div>
     </div>
 
-    
+    <div class="kontakta">
+        <div class="kontakta-del-1">
+            <!--Foto med rektor o syv-->
+        </div>
+
+        <div class="kontakta-del-2">
+            <!-- Detaljer om skolan kontakta -->
+        </div>
+
+    </div>
 
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js" integrity="sha256-lPE3wjN2a7ABWHbGz7+MKBJaykyzqCbU96BJWjio86U=" crossorigin="anonymous"></script>
