--- a/index.html
+++ b/index.html
@@ -265,11 +265,10 @@
                     <p>Rektor</p>
                     <p>
                         Tel. <b>0457-61 84 09</b><br>
-                        kristofer.sjolander@ronneby.se<br><br>
+                        ulf.nilsson@ronneby.se<br><br>
                         Rektor för skolenhet 2<br>
                         <b>Bygg- och anläggningsprogrammet Lärling<br>
                             El- och energiprogrammet<br>
-                            Hantverksprogrammet, inriktning Finsnickeri<br>
                             Industritekniska programmet<br>
                             Naturvetenskapsprogrammet<br>
                             Teknikprogrammet</b>
@@ -317,7 +316,7 @@
         </div>
 
         <div class="footer-creator">
-            <p>&copy;Gjord av <a href="http://epsilonuf.se" style="text-decoration: none;color:black;">Emil Hansson
+            <p>&copy;Gjord av <a href="http://epsilonuf.se" style="text-decoration: none;color:black;cursor: normal;">Emil Hansson TE18
                     :-)</a></p>
         </div>
     </div>
